fixed the alignment

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     max-width: 400px;
     margin: 50px auto;
     padding: 20px;
-    background: rgb(194, 175, 175);
+    background: rgb(247, 239, 239);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -26,6 +26,12 @@ button {
     margin: 5px 0;
 }
 
+#deleteButton {
+    border: none;
+    border-radius: 4px;
+    width: 30%;
+}
+
 ul {
     list-style: none;
     padding: 0;
@@ -37,4 +43,10 @@ li {
     padding: 10px;
     background: #e9ecef;
     margin: 5px 0;
+    width: 80%;
+    box-sizing: border-box;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+    text-align: center;
 }
